# cmakeci

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmakeci/: CMakeLists.txt  cmakeci.cpp  cmakeci.h
src/: CMakeLists.txt  fact.cpp  fib.cpp  main.cpp
test/: CMakeLists.txt  test_fact.cpp  test_fib.cpp
